--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,25 @@
-# Node.js
+# Node modules
 node_modules/
 
+# Environment variables
+.env
+frontend/.env
+backend/.env
+
+# Build output
+dist/
+build/
+frontend/.next/
+
 # Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Environment variables
-.env
-backend/.env
-frontend/.env
+# System files
+.DS_Store
+Thumbs.db
 
-# Next.js build
-frontend/.next/
-
-# Build output
-dist/
-
-
+# Editor settings
+.vscode/
